Fixed line break on navbar and made it so that the submit button doesn't display once a user has already submitted

--- a/src/styling/styles.css
+++ b/src/styling/styles.css
@@ -4,6 +4,30 @@
   font-family: "Bangers", cursive;
 }
 
+
+@media screen and (max-width: 1420px) {
+  .nav h1 {
+    font-size: px;
+  }
+  .nav a h4 {
+    font-size: 18px;
+
+  }
+}
+@media screen and (max-width: 1210px) {
+  .nav h1 {
+    font-size: 36px;
+  }
+
+  .nav a {
+    padding-left: 0;
+  }
+  .nav a h4 {
+    font-size: 18px;
+
+  }
+}
+
 .custom-bg {
   height: 100vh;
   background: url("../assets/storysquad.svg");
@@ -20,7 +44,6 @@
 .prompt {
   max-width: 650px;
 }
-
 
 .signupMain {
   height: 100%;
